# robotic-volume-measurement-system

./: CMakeLists.txt  Dockerfile  README.md  main.py  main.spec  requirements.txt  settings.json
app/: .gitignore  __init__.py  util.py  version.py
app/api/: .gitignore  ftpclient.py  httpserver.py  tcpconnectors.py  websockets.py
app/dimensioner/: .gitignore  __init__.py  coroutines.py
app/mongodb/: __init__.py
scripts/: .gitignore  AMR_20230221_164128_0000114000.pcd  AMR_20230221_164128_0000114001.pcd  AMR_20230221_164128_0000114002.pcd  AMR_20230221_164128_0000114003.pcd  AMR_20230221_164128_0000114004.pcd  AMR_20230221_164128_0000114006.pcd  config.yaml  simulator.py  starter.sh
